<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greybackground"
    android:scrollbars="none">
    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/registrationLL"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xXlargeTextSize"
            android:gravity="center"
            android:text="Register Your Device"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/textView"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center"
            android:src="@mipmap/profile_icon"
            android:textStyle="bold"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:visibility="gone" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/textInputBackground"
            android:visibility="gone">

            <EditText
                android:id="@+id/your_full_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/employeeName"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/textInputBackground">

            <EditText
                android:id="@+id/employeeIdEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/employeeId"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/textInputBackground">

            <EditText
                android:id="@+id/employeePasswordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/textInputBackground"
            android:visibility="gone">

            <EditText
                android:id="@+id/reg_token_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn"
            android:text="@string/register"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/xlargeTextSize"
        android:background="@color/cardview_light_background"
        android:padding="@dimen/xlargeTextSize"
        android:id="@+id/waitForApprovalLayout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="@dimen/xlargeTextSize"
            android:text="@string/wait_for_approval"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </FrameLayout>
</ScrollView>