<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="3dp">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Taxi Form"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainScrollView"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

        <android.support.v7.widget.CardView


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="10dp"
            android:id="@+id/cardView"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/mainLinearLayout"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/fullscreen_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:gravity="center"
                        android:text="Taxi Form"
                        android:textColor="#33b5e5"
                        android:textSize="24sp" />

                    <ImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@mipmap/taxi_icon2" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/fromNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Form No:  "
                        android:textColor="#33b5e5"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tv_form_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#33b5e5"
                        android:textSize="10sp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Date"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edt_settaxiform_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:focusable="false"
                    android:hint="SelectDate"
                    android:padding="5dp" />


                <TextView
                    android:id="@+id/projectTypeTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Project Type"
                    android:textColor="@color/black" />

                <EditText

                    android:id="@+id/edt_project_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:imeOptions="actionNext"
                    android:padding="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/vehicleNumberTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Vehicle No"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edt_vehicle_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:imeOptions="actionNext"
                    android:padding="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/startKmTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Start KM"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/edt_startkm_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:background="@drawable/edt_border"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="5dp" />


                    <EditText
                        android:id="@+id/edt_startkm_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edt_border"
                        android:drawableRight="@android:drawable/ic_menu_camera"
                        android:focusable="false"
                        android:padding="1dp"
                        android:singleLine="true" />


                </LinearLayout>


                <TextView
                    android:id="@+id/endKmTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="End KM"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_endkmtext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:background="@drawable/edt_border"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:padding="5dp" />

                    <EditText
                        android:id="@+id/edt_endkm_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edt_border"
                        android:drawableRight="@android:drawable/ic_menu_camera"
                        android:focusable="false"
                        android:padding="1dp"
                        android:singleLine="true" />

                </LinearLayout>


                <TextView
                    android:id="@+id/numberOfSitesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="No of Sites"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edt_siteno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/remarksTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Remark"
                    android:textColor="@color/black" />

                <EditText

                    android:id="@+id/edt_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:imeOptions="actionDone"
                    android:lines="5"
                    android:padding="5dp" />


                <Button
                    android:id="@+id/btn_close_taxiform"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_bg"
                    android:text="Close"
                    android:textColor="@color/white" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
    <!-- Footer aligned to bottom -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/overlayLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/edit_text_design"
                android:orientation="horizontal"
                android:padding="4dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/currentLocationLinearLayout"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/locationFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/currentlocation"
                        app:backgroundTint="@color/white" />

                    <TextView
                        android:id="@+id/currentLocationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currentlocation"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/taxiHistoryLinearLayout"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/taxihistory"
                        app:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxiHistory"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/locationHistoryLinearLayout"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/locationhistory"
                        app:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/locationHistory"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:visibility="gone"

                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/taxi"
                        app:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>
</RelativeLayout>